// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CxNavbarBrand customize 1`] = `
<div>
  <h3
    class="navbar-brand bazinga"
    href="/bazinga"
  >
    Test
  </h3>
</div>
`;

exports[`CxNavbarBrand witch href 1`] = `
<div>
  <a
    class="navbar-brand"
    href="/bazinga"
  >
    Test
  </a>
</div>
`;

exports[`loads and displays CxNavbarBrand component 1`] = `
<div>
  <span
    class="navbar-brand"
  >
    Test
  </span>
</div>
`;
